feat: list items - set up redis - seed items in DB - implement list items endpoint

--- a/apps/shopping_cart/project.json
+++ b/apps/shopping_cart/project.json
@@ -19,6 +19,30 @@
           "buildTarget": "shopping_cart:build:production"
         }
       }
+    },
+    "local:db:start": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "docker-compose --file apps/shopping_cart/docker-compose.yml up --detach"
+        ]
+      }
+    },
+    "local:db:stop": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "docker-compose --file apps/shopping_cart/docker-compose.yml stop"
+        ]
+      }
+    },
+    "local:db:destroy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "docker-compose --file apps/shopping_cart/docker-compose.yml down"
+        ]
+      }
     }
   }
 }
