--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
+    "connect-redis": "^7.1.1",
     "express": "^4.18.1",
+    "express-session": "^1.18.0",
+    "redis": "^4.6.14",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -24,6 +27,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
