--- a/apps/shopping_cart/tsconfig.app.json
+++ b/apps/shopping_cart/tsconfig.app.json
@@ -5,6 +5,6 @@
     "module": "commonjs",
     "types": ["node", "express"]
   },
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts", "**/__mocks__/*"],
   "include": ["src/**/*.ts"]
 }
